tests/ui/self/arbitrary_self_types_raw_pointer_struct.stderr
error[E0307]: invalid `self` parameter type: *const Foo
  --> $DIR/arbitrary_self_types_raw_pointer_struct.rs:6:25
   |
LL |     unsafe fn foo(self: *const Self) -> *const str {
   |                         ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`). Raw pointers do not implement Receiver. Consider wrapping your pointer in a newtype wrapper for which you implement Receiver.

error[E0307]: invalid `self` parameter type: *const Rc<Foo>
  --> $DIR/arbitrary_self_types_raw_pointer_struct.rs:11:28
   |
LL |     fn complicated_1(self: *const Rc<Self>) -> &'static str {
   |                            ^^^^^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`). Raw pointers do not implement Receiver. Consider wrapping your pointer in a newtype wrapper for which you implement Receiver.

error[E0307]: invalid `self` parameter type: Rc<*const Foo>
  --> $DIR/arbitrary_self_types_raw_pointer_struct.rs:16:35
   |
LL |     unsafe fn complicated_2(self: Rc<*const Self>) -> *const str {
   |                                   ^^^^^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0307`.
